# ZTStart

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/architecture/: decisiones.md
tests/integration/: test_shadow_cli.py
tests/unit/: test_approval_engine.py  test_explainer.py  test_models.py  test_rules_engine.py  test_shadow.py
ztstart/: __init__.py
ztstart/ansible_roles/: playbook.yml  requirements.yml
ztstart/ansible_roles/zt_baseline/: README.md
ztstart/ansible_roles/zt_baseline/defaults/: main.yml
ztstart/ansible_roles/zt_baseline/handlers/: main.yml
ztstart/ansible_roles/zt_baseline/meta/: main.yml
ztstart/ansible_roles/zt_baseline/tasks/: cis_1_1_1_1_filesystems_no_usados.yml  cis_3_1_1_ip_forwarding.yml  cis_5_2_1_permisos_sshd_config.yml  cis_5_4_1_politica_contrasenas.yml  main.yml
ztstart/ansible_roles/zt_baseline/templates/: modprobe-disable-filesystems.conf.j2
ztstart/approval_engine/: errores.py  models.py  motor.py  repositorio.py
ztstart/cli/: main.py
ztstart/config/perfiles/: pyme_basico.yaml
ztstart/explainer/: categorias.py  models.py  motor.py
ztstart/rules_engine/: models.py  motor.py  perfiles.py  shadow.py
ztstart/scanner/: models.py  openscap_wrapper.py  parser.py
